deployment on remote node